# k3s-operator

./: Cargo.toml  README.md
deployments/: hello-world.yaml  service.yaml  teste.sh
src/: main.rs
