[package]
name = "k3s-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.91.0"
tokio = { version = "1.0", features = ["full"] }
k8s-openapi = { version = "0.22", default-features = false, features = [
    "v1_30",
] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"